# drf-product-store

./: README.md  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
products/: models.py  urls.py
products/migrations/: 0001_initial.py  0002_product_quantity.py  0003_soldproduct.py  0004_rename_soldproduct_productbill.py  0005_productimage.py
